--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,6 +1,10 @@
-$active: #B0F7FF;
+$active: #9fb3c8;
+// $active: #02dac5;
 $clicked: #86A7C7;
-$inactive: #7080AA;
-$background: #0B32B0;
-$highlight: #463072;
-$text: #fff;
+$inactive: #243B53;
+$board: #102A43;
+$highlight: #02dac5;
+$text: #D9E2EC;
+$background: #222;
+$border-light: #486581;
+$border: #334E68;
