--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 *{
   box-sizing: border-box;
 }
 body{
   margin: 0;
-  font-family:sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
